--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+
+
+.Messages{
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.message.from-me .username{
+    display: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.message.from-me {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 5px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .message.from-me .message-body {
+    background-color: #b3da93;
+    color: rgb(83, 81, 81);
   }
-  to {
-    transform: rotate(360deg);
+  
+  .message {
+    margin-bottom: 20px;
   }
-}
+  .message-body {
+    max-width: 80%;
+    display: inline-block;
+    padding: 20px;
+    background-color: #F96167;
+    color: #FCE778;
+    border: 1px;
+    border-radius: 5px;
+    padding-right: 50px;
+  }
+  
+  .username {
+    font-weight: bold;
+    font-size: 0.9rem;
+    color: rgb(73, 69, 69);
+    margin-bottom: 5px;
+  }
+  .sendBar {
+      display: flex;
+      
+    position: relative;
+    overflow: hidden;
+    padding: 0 40px;
+    flex-shrink: 0;
+    margin-bottom: 10px;
+  }
+  .sendBar > input {
+    width: 100%;
+    padding: 10px;
+    
+  }
+  
